<resources>
    <string name="app_name">Politics Live!</string>
    <string name="api_2016_national_gop_primary">http://elections.huffingtonpost.com/pollster/api/charts/2016-national-gop-primary.json</string>
    <string name="api_republican_party_favorable_rating">http://elections.huffingtonpost.com/pollster/api/charts/republican-party-favorable-rating.json</string>
    <string name="api_2016_national_democratic_primary">http://elections.huffingtonpost.com/pollster/api/charts/2016-national-democratic-primary.json</string>
    <string name="api_democratic_party_favorable_rating">http://elections.huffingtonpost.com/pollster/api/charts/democratic-party-favorable-rating.json</string>
    <string name="api_2016_general_election">http://elections.huffingtonpost.com/pollster/api/charts/2016-general-election-trump-vs-clinton-vs-johnson.json</string>
    <string name="api_2016_house_race">http://elections.huffingtonpost.com/pollster/api/charts/2016-national-house-race.json</string>
    <string name="api_hillary_clinton_favorable_rating">http://elections.huffingtonpost.com/pollster/api/charts/hillary-clinton-favorable-rating.json</string>
    <string name="api_bernie_sanders_favorable_rating">http://elections.huffingtonpost.com/pollster/api/charts/bernie-sanders-favorable-rating.json</string>
    <string name="api_donald_trump_favorable_rating">http://elections.huffingtonpost.com/pollster/api/charts/donald-trump-favorable-rating.json</string>
    <string name="api_ted_cruz_favorable_rating">http://elections.huffingtonpost.com/pollster/api/charts/ted-cruz-favorable-rating.json</string>
    <string name="api_john_kasich_favorable_rating">http://elections.huffingtonpost.com/pollster/api/charts/john-kasich-favorable-rating.json</string>
    <string name="api_2016_national_house_race">http://elections.huffingtonpost.com/pollster/api/charts/2016-national-house-race.json</string>
    <string name="api_party_identification">http://elections.huffingtonpost.com/pollster/api/charts/party-identification.json</string>
    <string name="api_us_satisfaction">http://elections.huffingtonpost.com/pollster/api/charts/us-satisfaction.json</string>
    <string name="api_us_right_direction_wrong_track">http://elections.huffingtonpost.com/pollster/api/charts/us-right-direction-wrong-track.json</string>
    <string name="api_congress_job_approval">http://elections.huffingtonpost.com/pollster/api/charts/congress-job-approval.json</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_cast_ballot">CastBallot</string>
    <string name="title_activity_ballot">Cast Your Vote</string>
    <string name="candidate_bernie">Bernie Sanders</string>
    <string name="candidate_hilary">Hilary Clinton</string>
    <string name="candidate_trump">Donald Trump</string>
    <string name="candidate_cruz">Ted Cruz</string>
    <string name="candidate_kasich">John Kasich</string>
    <string name="candidate_undecided">Undecided</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_list_of_candidates">ListOfCandidates</string>
    <string name="title_activity_candidate_profile">CandidateProfile</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_create_user">CreateUser</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string-array name="issues_ted_cruz">
        <item>Enforces the law against millions of illegal immigrants in America.
            Believes illegal immigrants are economic distress for lower-income Americans.</item>
        <item>Prayed against Supreme Court decision on same-sex marriage legalization.</item>
        <item>Believes everyone should have right education whether public, private, or others.
            Supports ending racial preferences for college admissions.</item>
        <item>Strongly in favor of the second amendment.
            Strongly against gun restrictions. </item>
        <item>Demands a Balanced Budget amendment.
            Balance budget amendment to prevent bankruptcy.</item>
        <item>In favor of repealing ObamaCare.
            Raise eligible age on Medicare.</item>
        <item>Not in favor of protecting ocean, costal, and Great Lakes ecosystems.</item>
        <item>Believes our allies need America for leadership.
            Wants to break diplomatic relations with Cuba.</item>
    </string-array>
    <string-array name="issues_donald_trump">
        <item>Wants to ban Muslims from coming to America.
            Believes illegal immigration hurts America’s economy.</item>
        <item>Believes same-sex marriage is a state issue.
            Does not support gay marriage and against same-sex partner benefits.</item>
        <item>Do not forgive federal student loans, but take ways to help students pay back.
            In favor of schools competing for student applicants.</item>
        <item>Strongly in favor of the second amendment.
            Believes gun control influences gun violence.</item>
        <item>Massive tariffs on China and Mexico.
            Not in favor of increasing the minimum wage.</item>
        <item>Believes in universal health care.
            Wants to replace Obamacare with health saving accounts.</item>
        <item>Believes Environmental Protection is a disgrace because they bring new regulations.</item>
        <item>Wants China to deal with North Korea and make its dictator dead.
            Believes China is controlling North Korea.
            Views Russia as a crucial relationship in diplomacy and respect.</item>
    </string-array>
    <string-array name="issues_john_kasich">
        <item>Legalize illegal immigrants with fine and taxes.
            In favor of more immigrant visas for skilled and experienced workers.</item>
        <item>Accepts Supreme Court ruling on same-sex marriage.</item>
        <item>Daughters have to attend Christian schools.
            Bible stories are considered historical facts.</item>
        <item>In favor of keeping gun restrictions, but tighten up terrorist firearms.
            Strongly against gun restrictions.</item>
        <item>In favor of Balanced Budget amendment.
            Economic uncertainty worries working families.</item>
        <item>Wants to expand Medicaid.
            Strongly opposes ObamaCare and government-run healthcare.</item>
        <item>Proposed $300 million investment for hurricane protection and costal restoration.</item>
        <item>Believes China has control on North Korea.
            Believes China does not have control over South China Sea.
            Wants to bring the U.S. Navy to the sea.</item>
    </string-array>
    <string-array name="issues_hillary_clinton">
        <item>In favor of in-state tuition for illegal immigrants.
            Give opportunity for illegal immigrants to become U.S. citizens.</item>
        <item>Supports gay marriage and the law for it.</item>
        <item>Wants schools to teach discipline, self-control, and patience.
            Believes bible is part of history and literature, not part of science or religion.</item>
        <item>In favor of giving states and cities control on local gun laws.
            Limit access to firearms to citizens.</item>
        <item>In favor of reducing corporate power.
            Believes the economy is not in favor for the middle-class.</item>
        <item>Believes Medicare is not economically feasible.
            Healthcare should be available to all children.
            No national ban on smoking cigarettes.</item>
        <item>Advocates green energy jobs.
            In favor of scrutinizing exposures to toxic materials.</item>
        <item>Believes America as the indispensable nation.
            Prioritizes helping people first than committing troops.</item>
    </string-array>
    <string-array name="issues_bernie_sanders">
        <item>Wants to give opportunity for illegal immigrants to become U.S. citizens.
            Wants to secure borders around U.S. without building a fence.</item>
        <item>Believes that no matter what sexual orientation, everyone has the right to love each other.</item>
        <item>Wants free education (including college) for low income students.
            Wants tuition-free for public colleges.</item>
        <item>Believes citizens have the right to buy firearms.
            Wants to tighten background checks in gun control.</item>
        <item>Believes root causes of economic inequality needs to be addressed.
            Economic issues are far out reached for the minority groups.</item>
        <item>Believes in Medicare for all citizens.
            Helped in ObamaCare policy and wants to extend it more to 29 million uninsured citizens.</item>
        <item>Believes genetically modified organisms need to be labeled.
            In favor of protecting ocean, coastal, and Great Lakes ecosystems.</item>
        <item>Wants America to be open to Syrian refugees.
            Wants China to deal with North Korea.
            Wants to promote democracy in China.</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_app_settings">Settings</string>
    <string name="title_activity_app_send_email">Send Email</string>
</resources>