<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.bradleycooper.politicslive.Ballot"
    tools:showIn="@layout/activity_ballot">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:weightSum="2"
        android:id="@+id/linearLayout"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Clear Selections"
            android:id="@+id/button_clear_selections"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Submit"
            android:id="@+id/button_submit"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite" />
    </LinearLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_alignLeft="@+id/linearLayout"
        android:layout_alignStart="@+id/linearLayout"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/linearLayout"
        android:layout_alignEnd="@+id/linearLayout"
        android:layout_above="@+id/linearLayout"
        android:clickable="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Democratic Nominee for President:"
                android:id="@+id/textView2"
                android:textStyle="bold"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:contextClickable="false"
                android:elevation="3dp"
                android:background="#ffffff"
                android:id="@+id/layoutBernie"
                android:layout_below="@+id/textView2"
                android:layout_marginTop="10dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="75dp"
                android:layout_marginRight="75dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView2"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/bernie_square" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/candidate_bernie"
                    android:id="@+id/checkBoxBernie"
                    android:checked="false"
                    android:textSize="15sp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:contextClickable="false"
                android:elevation="3dp"
                android:background="#ffffff"
                android:id="@+id/layoutHilary"
                android:layout_below="@+id/layoutBernie"
                android:layout_marginTop="10dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="75dp"
                android:layout_marginRight="75dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView3"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/hilary_square" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/candidate_hilary"
                    android:id="@+id/checkBoxHilary"
                    android:checked="false"
                    android:textSize="15dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Republican Nominee for President:"
                android:id="@+id/textView5"
                android:layout_alignLeft="@+id/textView2"
                android:layout_alignStart="@+id/textView2"
                android:layout_marginTop="35dp"
                android:textStyle="bold"
                android:layout_below="@+id/layoutHilary" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:contextClickable="false"
                android:elevation="3dp"
                android:background="#ffffff"
                android:id="@+id/layoutTrump"
                android:layout_below="@+id/textView5"
                android:layout_marginTop="10dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="75dp"
                android:layout_marginRight="75dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView4"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/trump_square" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/candidate_trump"
                    android:id="@+id/checkBoxTrump"
                    android:checked="false"
                    android:textSize="15dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:contextClickable="false"
                android:elevation="3dp"
                android:background="#ffffff"
                android:id="@+id/layoutCruz"
                android:layout_below="@+id/layoutTrump"
                android:layout_marginTop="10dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="75dp"
                android:layout_marginRight="75dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView5"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/cruz_square" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/candidate_cruz"
                    android:id="@+id/checkBoxCruz"
                    android:checked="false"
                    android:textSize="15dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:contextClickable="false"
                android:elevation="3dp"
                android:background="#ffffff"
                android:id="@+id/layoutKasich"
                android:layout_below="@+id/layoutCruz"
                android:layout_marginTop="10dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="75dp"
                android:layout_marginRight="75dp"
                android:layout_marginBottom="10dp">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/candidate_kasich"
                    android:id="@+id/checkBoxKasich"
                    android:checked="false"
                    android:textSize="15dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView6"
                    android:src="@drawable/kasich_square"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />
            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
